# EXPERt

./: .eslintrc.cjs  .gitignore  Dockerfile  EXPERt_manual.org  LICENSE  README.md  cfg.json  docker_start.sh  expert_cfg.json  notes.org  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  rollup.config.js  runexp.py  tsconfig.json  userinit.py
client/: dashboard.ts  dialogs.ts  expert_cfg.json  instlist.ts  login.ts  task_consent.ts  task_incomplete.ts  task_loader.ts  task_qnaire.ts  task_soundcheck.ts  task_thankyou.ts  uploader.ts
example/amelio/: stims-A.txt  stims-B.txt  stims-D.txt  stims-training.txt
expert/: __init__.py  dashboard.py  exper.py  experiment.py  profile.py  server.py  tasks.py  templates.py  timestamp.py  tool.py  user.py  view.py
expert/templates/: confirm_dialog.html.jinja  dashboard.html.jinja  dialog.html.jinja  download_dialog.html.jinja  error.html.jinja  full.html.jinja  layout.html.jinja  load_bundle_dialog.html.jinja  login.html.jinja  norun.html.jinja  overlay.html.jinja  task_base_consent.html.jinja  task_base_layout.html.jinja  task_base_qnaire.html.jinja  task_nonconsent.html.jinja  task_returned.html.jinja  task_soundcheck.html.jinja  task_terminated.html.jinja  task_thankyou.html.jinja  task_timedout.html.jinja  traceback_dialog.html.jinja  upload_dialog.html.jinja
sass/: _globals.scss  amelio.scss  dboard.scss  main.scss
src/: cfg.json  runexp.py
src/expert/: __init__.py  cfg.py  experiment.py  globalparams.py  profile.py  tasks.py  timestamp.py
src/templates/: confirm_dialog.html.jinja  dashboard.html.jinja  layout.html.jinja  task_base_layout.html.jinja  task_base_qnaire.html.jinja  task_nonconsent.html.jinja  task_soundcheck.html.jinja  (+2 more)
(+51 files in other folders)
