[project]
name = "EXPERt"
version = "0.6.1"
description = "Application for running browser-based scientific experiments"
authors = [
    {name = "Josh Fennell", email = "josh@jfnl.org"},
]
dependencies = [
    "flask>=2.0.3",
    "flask-socketio>=5.1.1",
    "eventlet>=0.33.0",
    "strictyaml>=1.6.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/fizzstudio/EXPERt"
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
extraPaths = ["__pypackages__/3.10/lib"]