[project]
name = "EXPERt"
version = "0.13.2"
description = "Application for running browser-based scientific experiments"
authors = [
    {name = "Josh Fennell", email = "josh@jfnl.org"},
]
license = "MIT"
dependencies = [
    "flask>=2.2.2,<2.3.0",
    "flask-socketio>=5.3.2,<5.4.0",
    "eventlet>=0.33.3,<0.34.0",
    "strictyaml>=1.6.1,<1.7.0",
    "tomli>=2.0.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/fizzstudio/EXPERt"
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
extraPaths = ["__pypackages__/3.10/lib"]